# stairspeedtest-reborn

./: .travis.yml  CMakeLists.txt  LICENSE  Makefile.macos  README.md  build.alpine.clients.sh  build.alpine.release.sh  build.bat  build.macos.release.sh  build.macos.sh  build.sh  build.static.sh  config.alpine.sh  config.alpine.shared.sh  config.macos.sh  config.sh  config.termux.sh  geoip.cpp  geoip.h  ini_reader.h  logger.cpp  logger.h  main.cpp  misc.cpp  misc.h  multithread-test.cpp  multithread_test.cpp  multithread_test.h  nodeinfo.h  perf_test.cpp  perf_test.h  pref.ini  printout.cpp  printout.h  processes.cpp  processes.h  rapidjson_extra.cpp  rapidjson_extra.h  renderer.cpp  renderer.h  (+18 more)
.github/workflows/: build.yml  build2.yml  小白尝试.yml
base/: pref.ini  webgui.bat  webgui.sh  webserver.sh
base/tools/gui/: gui.html  index.html
base/webui/: index.html  index.js  manifest.js  vendor.js
res/: res.rc
scripts/: build.alpine.clients.sh  build.alpine.release.sh  build.macos.clients.sh  build.macos.release.sh  build.windows.clients.sh  build.windows.maindeps.sh  build.windows.release.sh  config.alpine.shared.sh  config.alpine.static.sh  config.macos.sh  config.termux.sh
src/: confbuild.cpp  geoip.cpp  geoip.h  ini_reader.h  logger.cpp  logger.h  main.cpp  misc.cpp  misc.h  multithread_test.cpp  multithread_test.h  nodeinfo.h  ntt.cpp  perf_test.cpp  perf_test.h  printmsg.cpp  printmsg.h  printout.cpp  printout.h  processes.cpp  processes.h  rapidjson_extra.h  renderer.cpp  renderer.h  rulematch.cpp  rulematch.h  socket.cpp  socket.h  speedtestutil.cpp  speedtestutil.h  tcping.cpp  version.h  webget.cpp  webget.h  webgui_wrapper.cpp  webserver.h  webserver_libevent.cpp
tools/gui/: gui.html
tools/misc/: style.css  util.js
